@@ -607,6 +607,9 @@ Release 0.20.0 - Unreleased
     HADOOP-5254. The Configuration class should be able to work with XML
     parsers that do not support xmlinclude. (Steve Loughran via dhruba)
 
+    HADOOP-4692. Namenode in infinite loop for replicating/deleting corrupt
+    blocks. (hairong)
+
 Release 0.19.1 - Unreleased
 
   IMPROVEMENTS
